tests/ui/coroutine/missing_coroutine_attr_suggestion.rs
//@ run-rustfix

#![feature(coroutines, stmt_expr_attributes)]

fn main() {
    let _ = || yield;
    //~^ ERROR `yield` can only be used
}
